@@ -109,9 +109,8 @@ __BEGIN_DECLS
 # define DLLEXPORT __declspec(dllimport)
 #endif
 
-int	DLLEXPORT glob (const char *, int, int (*)(const char *, int), glob_t *);
-void	DLLEXPORT globfree (glob_t *);
-int	DLLEXPORT glob_pattern_p (const char *, int);
+int	DLLEXPORT glob(const char *, int, int (*)(const char *, int), glob_t *);
+void	DLLEXPORT globfree(glob_t *);
 __END_DECLS
 
 #endif /* !_GLOB_H_ */
